Added package title

--- a/source/net/fortuna/ical4j/data/package.html
+++ b/source/net/fortuna/ical4j/data/package.html
@@ -1,4 +1,5 @@
 <html>
+<title>Package [net.fortuna.ical4j.data]</title>
 <body>
 Contains types providing RFC2445 input, output and parsing functionality.
 </body>
