--- a/source/net/fortuna/ical4j/model/parameter/package.html
+++ b/source/net/fortuna/ical4j/model/parameter/package.html
@@ -1,4 +1,5 @@
 <html>
+<title>Package [net.fortuna.ical4j.model.parameter]</title>
 <body>
 Contains types used to represent the iCalendar parameter model.
 </body>
