--- a/source/net/fortuna/ical4j/model/property/package.html
+++ b/source/net/fortuna/ical4j/model/property/package.html
@@ -1,4 +1,5 @@
 <html>
+<title>Package [net.fortuna.ical4j.model.property]</title>
 <body>
 Contains types used to represent the iCalendar property model.
 </body>
