--- a/source/net/fortuna/ical4j/util/package.html
+++ b/source/net/fortuna/ical4j/util/package.html
@@ -1,4 +1,5 @@
 <html>
+<title>Package [net.fortuna.ical4j.util]</title>
 <body>
 Contains utility types that provide supporting functionality for iCal4j.
 </body>
