--- a/source/net/fortuna/ical4j/transform/package.html
+++ b/source/net/fortuna/ical4j/transform/package.html
@@ -1,4 +1,5 @@
 <html>
+<title>Package [net.fortuna.ical4j.transform]</title>
 <body>
 Contains types used to transform an iCalendar component model according to RFC2446.
 </body>
